<resources>

    <!-- Nome do projeto -->
    <string name="app_name">Fragment</string>

    <!-- Barra superior -->
    <string name="barra_superior_botao_conversas"><b>Conversas</b></string>
    <string name="barra_superior_botao_status">Status</string>
    <string name="barra_superior_botao_chamadas">Chamadas</string>

    <!-- Fragment conversas -->
    <string name="fragment_conversas_text_conversas"><b>Conversas</b></string>

    <!-- Fragment status -->
    <string name="fragment_status_text_status"><b>Status</b></string>

    <!-- Fragment chamadas -->
    <string name="fragment_chamadas_text_chamadas"><b>Chamadas</b></string>

    <!-- Fragment perfil -->

    <!-- Hints -->
    <string name="fragment_perfil_hint_nome">Digite seu nome:</string>
    <string name="fragment_perfil_hint_sobrenome">Digite seu sobrenome:</string>

    <!-- Botões -->
    <string name="fragment_perfil_button_salvar">Salvar</string>"


</resources>