<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageBackgroundBarraSuperior"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background_completo_green" />

    <ImageView
        android:id="@+id/imagemPerfil"
        android:layout_width="60dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/botaoStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageBackgroundBarraSuperior"
        app:srcCompat="@drawable/image_foto_perfil" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoConversas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_completo_green"
        android:text="@string/barra_superior_botao_conversas"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackgroundBarraSuperior"
        app:layout_constraintEnd_toStartOf="@+id/botaoStatus"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoStatus"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_completo_green"
        android:text="@string/barra_superior_botao_status"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackgroundBarraSuperior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/botaoChamas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_completo_green"
        android:text="@string/barra_superior_botao_chamadas"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageBackgroundBarraSuperior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/botaoStatus" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerMain"
        android:name="com.example.fragment.fragments.ConversasFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBackgroundBarraSuperior"
        tools:layout="@layout/fragment_conversas"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.example.fragment.fragments.PerfilFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBackgroundBarraSuperior"
        tools:layout="@layout/fragment_perfil" />

    <TextView
        android:id="@+id/textoOla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imagemPerfil"
        app:layout_constraintStart_toEndOf="@+id/imagemPerfil" />

    <TextView
        android:id="@+id/textoNomeUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textoOla"
        app:layout_constraintStart_toEndOf="@+id/textoOla"
        app:layout_constraintTop_toTopOf="@+id/textoOla" />

</androidx.constraintlayout.widget.ConstraintLayout>